# libtv

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  addon.xml  context.py  default.py  pyproject.toml  service.py
.claude/: settings.json
.claude/hooks/: protect-kodi-addons.py
.claude/skills/deploy-to-kodi/: SKILL.md
.claude/skills/document-changes/: SKILL.md
.devcontainer/: devcontainer.json  post-create.sh
docs/: architecture.md  live-testing.md
resources/: settings.xml
resources/language/resource.language.en_gb/: strings.po
resources/lib/libtv/: channels.py  daemon.py  generator.py  keymap.py  library.py  manage.py  overlay.py  plugin.py  schedule.py  writers.py
scripts/: build_zip.py  sanity_check.py
tests/: conftest.py  test_channels.py  test_daemon.py  test_generator_and_resolver.py  test_keymap.py  test_library.py  test_manage.py  test_schedule.py  test_writers.py
